# back_to_the_future

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: archive_manager.h  common.h  directory_processor.h  directory_serializer.h  file_compressor.h  file_hasher.h
minizip/: CMakeLists.txt  Makefile  cmake_install.cmake
proto/: fs.pb.cc  fs.pb.h  fs.proto
src/: archive_manager.cpp  directory_processor.cpp  directory_serializer.cpp  file_compressor.cpp  file_hasher.cpp
